# spaced

./: .eslintrc.cjs  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Trunk.toml  docker-compose.yaml  eslint.config.js  package-lock.json  package.json  shell.nix  tsconfig.json  vite.config.ts
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug.md
.github/actions/: docker-stack.yaml  stack.sh
.github/actions/docker_stack/: Dockerfile  action.yaml  stack.sh
.github/workflows/: build.yaml  ci.yaml  cleanup.yaml  e2e.yaml  fmt.yaml  lint.yaml  load.yaml  pages.yaml  publish.yaml  release.yaml  review.yaml  staging.yaml  test.yaml
_site/ocr-demo/: index.html
_site/ocr-demo/assets/: index-BZ0Z3CEM.js  index-DTm_w671.css  ocrs_bg-BT9eRiEd.wasm
config/: lighthouserc.cjs  nginx-dev.conf  nginx-prod.conf  prometheus.yaml
config/certbot/: Dockerfile
config/docker/: certbot.yaml  compose-prod.yaml  prod.yaml  root-stack.yaml  services-stack.yaml  stack-nginx.yaml  stack-traefik.yaml  test-stack.yaml
config/load/: document_connections.yaml  document_updates.yaml  functions.cjs  load_documents.yaml  playwright.yaml  scenarios.mjs  single_document_updates.yaml  socketio.yaml  test.mjs
config/load_tests/: playwright.yaml  socketio.yaml  test.js
config/nginx/: Dockerfile  dev.conf  prod.conf  static.conf
config/nix/: configuration.nix  disko-config.nix  flake.nix
config/prometheus/: dev.yaml  swarm.yaml
docs/: index-aYNptdGO.css  index.html  notes.md
docs/archive/2023-2024/: C3-architecture.plantuml
docs/archive/2024-2025/: C3-architecture.plantuml  privacy_audit.md  project-plan.md  research-performance.md  research-scalability.md  security_audit.md
docs/assets/: playwright_1737099693.json  playwright_1737101120.json  playwright_1737101616.json  playwright_1737102683.json  playwright_1737104598.json  playwright_1737105835.json  playwright_1737110483.json  playwright_1737110835.json
docs/assets/diagrams/: frontend_components.plantuml  item_socket_components.plantuml  spaced_containers.plantuml  topology.drawio
docs/guides/: architecture-and-infrastructure.md  architecture.md  hosting.md
docs/guides/deployments/: ionos.md  swarm.md
docs/guides/development/: container_tooling.md
srcs/app/: index.css  index.html  main.ts  package.json  tsconfig.json
srcs/app/components/: App.tsx  AuthProvider.tsx  Background.tsx  ConfigProvider.tsx  Container.tsx  Controls.tsx  Cursors.tsx  Dialog.tsx  Editors.tsx  Elements.tsx  IPCProvider.tsx  SelectionProvider.tsx  StateProvider.tsx  Toolbar.tsx  ViewportProvider.tsx  WYSIWYG.tsx
srcs/app/lib/: const.ts  editor-types.d.ts  idb.ts  item.test.ts  item.ts  plugins.ts  types.ts
srcs/app/wasm/: ocrs.js  ocrs_bg.wasm
srcs/burning/: Cargo.toml  build.rs
srcs/burning/src/: main.rs
srcs/e2e/: package.json  playwright.config.ts  tsconfig.json
srcs/e2e/tests/: item.spec.ts  user.spec.ts
srcs/e2e/utils/: editor.ts
srcs/example/: Cargo.toml
srcs/example/src/: main.rs
srcs/leptos/: Cargo.toml  index.html
srcs/leptos-app/: Cargo.toml  README.md
srcs/leptos-app/end2end/: package.json
srcs/leptos-app/src/: main.rs
srcs/leptos/src/: lib.rs  main.rs
srcs/leptos_app/: Cargo.toml  index.html
srcs/leptos_app/src/: main.rs
srcs/leptos_app/src/components/: app.rs  background.rs  container.rs  controls.rs  icon.rs  mod.rs  viewport.rs
srcs/leptos_app/src/lib/: mod.rs  selection.rs  tauri.rs  vector.rs
srcs/proto/: item.proto  utils.proto
srcs/scripts/: healthcheck.sh  set_ssh_key.sh  sqlx_prepare.sh  start.sh
srcs/services/item_producer/: Cargo.toml  Dockerfile  build.rs
srcs/services/item_socket/: Cargo.toml  Dockerfile
srcs/services/item_socket/src/: document.rs  main.rs  metrics.rs  y.rs
srcs/services/migrations/: 20230916145517_item.sql  20240619165636_asset.sql
srcs/services/user_service/: Cargo.toml  Dockerfile  build.rs
srcs/slate-solid/: README.md  custom-types.d.ts  custom-types.ts  index.ts  package.json  tsconfig.build.json  tsconfig.json
srcs/slate-solid/components/: children.tsx  editable.test.tsx  editable.tsx  element.tsx  leaf.tsx  selector.tsx  slate.test.tsx  slate.tsx  string.tsx  (+1 more)
srcs/slate-yjs-solid/: README.md  index.ts  package.json  tsconfig.json
srcs/tauri/: Cargo.toml  build.rs  tauri.conf.json
srcs/tauri/.sqlx/: query-21601ff864cf4450fe6368694216c1ea9e8c5114f7021673a567aeffc58995a2.json  query-2d3db8f051ef9b67edfae3419a43e8ec6a4253a97becd3ff0be405ae34df7e35.json  query-2dd2b7b4cd49e1175da18197150e50c562632c34989aa6b5e81a655d4b3cd849.json  query-37d1e500b9124ae3efc0f25276cc8633c0565132c02240d125a6799b68283160.json  query-73ca544d2d0a0254be1e2dc6c138764343435ab44194f5e69b689ed10da812db.json  query-7d9c7f203eb48d8de3ed387ab4ca546970ae789e4d251b73f925ace7f749f4ca.json  query-8c3a5c94711c26275e56fa234936a94580af3ea5b54056e9317a4a771f26f1b7.json  query-9176990a9e48c5115797c1c38991cfd228a563faf43dc858e3d0b5a5489358ea.json  query-9683a6d96f50a3c8a77758811a622e595a8e27bb4570aabf284a9731fd894af5.json  query-97bc48719cb5a80d351414921c8e71de51f4c898ba4c247e0533100c7837d085.json  query-9ba67a8c8c41b422fca9bde03b9de080948d9ec8314ca58a3f112773c044b704.json  query-9f64f458a74888c8738c4c34139ef87997773d4c6395225c253c860f7f206863.json  query-bb817fd244277d627904dfb127c360a4a84f2d38a8c72395c0a70312bcbfcae0.json  query-be5cc46871e7840f0fcdf1a31880b6d0d99b821d48abb8c75bb504353184a606.json  query-d5b390e516d7077daccaf4bc834bd0a6c2b02c8aeba880ec3aa7f9933c1e1ac1.json  query-e624cce1a27d1d50f5720a720edc32d0347624fbdb7e9a32dd7b216944a535aa.json  query-eb8fb20965b0e613057af1e84bd99c4624f5796f78d8ed2b8d8cf030d6e61877.json  query-f5d68ae6036d0de792397744e0de42174cd335ac7fba9dbc65ed2667693d7d76.json
srcs/tauri/migrations/: 20240127221318_item.sql  20240619165636_asset.sql  20241028100044_editor.sql  20241125093333_sharing.sql
srcs/tauri/src/: item.rs  lib.rs  main.rs
srcs/types/: index.ts  package.json
srcs/utils/: Cargo.toml
srcs/utils/src/: lib.rs
static/: index.css  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
(+58 files in other folders)
