[workspace]
members = [
  "srcs/services/item_producer",
  "srcs/services/item_socket",
  "srcs/services/user_service",
  "srcs/tauri",
  "srcs/utils",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
repository = "https://github.com/FHICT-S-Koen/Spaced"
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
amqprs = "2"
axum = { version = "0.8" }
axum-extra = { version = "0.10" }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
jsonwebtoken = "9"
once_cell = "1"
prost = "0.14"
prost-build = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
