[package]
name = "example"
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
candle-core = "0.4.1"
candle-onnx = "*"
image = "*"
