[package]
name = "spaced"
version.workspace = true
description = "Desktop app for Spaced"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
anyhow.workspace = true
serde.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-dialog = "2.0.0-beta"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
utils = { path = "../utils", features = ["logging"] }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
