[package]
name = "spaced"
version.workspace = true
description = "Desktop app for Spaced"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tauri = { version = "1", features = ["dialog"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
utils = { path = "../utils", features = ["logging"] }
uuid = "1.9.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
