[package]
name = "utils"
version.workspace = true
description = "Utils"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "utils"
crate-type = ["lib"]

[dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["macros"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
logging = ["dep:tracing", "dep:tracing-subscriber"]
axum = ["dep:axum", "dep:serde", "dep:serde_json"]
