[package]
name = "item_socket"
version.workspace = true
description = "A websocket server to manage item updates in real-time."
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "item_socket"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
socketioxide = { version = "0.15", features = [
  "tracing",
  "extensions",
  "state",
] }
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
futures-util.workspace = true
utils = { path = "../../utils", features = ["logging"] }
uuid = { version = "=1.10.0", features = ["v4"] }
yrs = { version = "*", features = ["sync"] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
dashmap = "6.1.0"
